--- a/iopcc-2025.html
+++ b/iopcc-2025.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -56,7 +56,7 @@
         <article>
             <h1>2025 IOPCC</h1>
             <p>
-                This year, me and Orthoplex decided to try to submit something for the 3rd
+                This year, me and orthoplex decided to try to submit something for the 3rd
                 <a href="https://pyobfusc.com/">International Obfuscated Python Code Contest</a>.
                 You can see our submission here:
                 <a href="https://pyobfusc.com/submissions2025/1884885198/">quine.py</a>. I'll talk
@@ -315,7 +315,7 @@ La=+++++Jc+Jj
             <p>
                 We experimented with making the original source code also valid python, so both
                 <code>python3</code> and <code>python3 -x</code> would work. An example is this
-                brilliant snippet written by Orthoplex:
+                brilliant snippet written by orthoplex:
             </p>
             <pre><code class="language-python">#coding: 1026
 {}['utf8']%[[{{kçkÅkçkÂkçkÃkçkÄkçkÉ@~M}@ÅÂÃÄÉ}@lM]]^hì@~ÅNÂNÃNÄNÉNÃk^HçzÌhì</code></pre>
